# ouroboros-ui

./: .gitignore  CLAUDE.md  CREDITS.md  Cargo.toml  LICENSE  README.md  book.toml  clippy.toml  gen_summary.py
.github/workflows/: ci.yml
docs/: README.md  SUMMARY.md  architecture.md  governance.md  guards.md  layout.md  theming.md  tokens.md  typography.md  usage.md
docs/components/: README.md
examples/: storybook.rs  taffy_spike.rs
src/: auto_layout.rs  lib.rs
src/atoms/: avatar.rs  badge.rs  button.rs  checkbox.rs  color_swatch.rs  divider.rs  focus.rs  heading.rs  icon.rs  input.rs  kbd.rs  mod.rs  numeric_field.rs  progress.rs  radio.rs  skeleton.rs  slider.rs  spinner.rs  splitter_handle.rs  surface.rs  switch.rs  text.rs  textarea.rs  toggle.rs  tooltip.rs
src/cells/: list_item.rs  menu_item.rs  mod.rs  property_row.rs  responsive_row.rs  table_cell.rs  table_row.rs  toolbar_button.rs  tree_node.rs
src/graph/: canvas.rs  controls.rs  edge.rs  grid.rs  handle.rs  minimap.rs  mod.rs  node.rs  resizer.rs  search.rs  state.rs  tokens.rs  toolbar.rs  viewport.rs
src/molecules/: alert.rs  breadcrumb.rs  card.rs  checkbox_card.rs  collapsible.rs  color_field.rs  field.rs  input_group.rs  mod.rs  radio_card.rs  radio_group.rs  search_field.rs  tabs.rs  toggle_group.rs  vector_field.rs
src/organisms/: accordion.rs  app_shell.rs  autocomplete.rs  dialog.rs  dropdown_menu.rs  menubar.rs  mod.rs  panel.rs  popover.rs  select.rs  sidebar.rs  splitter.rs  tab_view.rs  table.rs  toast.rs  toolbar.rs  tree_view.rs
src/theme/: mod.rs  typography.rs
src/tokens/: component.rs  core.rs  layout.rs  mod.rs  semantic.rs
tests/: atoms.rs  auto_layout.rs  graph.rs  no_painter_in_molecules.rs  no_raw_values.rs
web/: index.html
(+72 files in other folders)
