# ouroboros-ui — standalone design system crate (shadcn-for-egui, token-first).
# Intentionally its own workspace root: zero dependency on the monorepo workspace.
[workspace]

[package]
name = "ouroboros-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Token-first design system for egui — the shadcn language reimplemented natively."
repository = "https://github.com/type-zero-labs/ouroboros-ui"

[dependencies]
egui = "0.34.1"
egui-phosphor = { version = "0.12", default-features = false, features = ["light"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
eframe = "0.34.1"

[[example]]
name = "storybook"
path = "examples/storybook.rs"
